<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>io.domisum.lib</groupId>
	<artifactId>AuxiliumLib</artifactId>
	<version>1.1.0-SNAPSHOT</version>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
	</properties>

	<dependencies>
		<dependency> <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.13.0</version>
		</dependency>
		<dependency> <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-text -->
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-text</artifactId>
			<version>1.10.0</version>
		</dependency>
		<dependency> <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.14.0</version>
		</dependency>
		<dependency> <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.16.0</version>
		</dependency>
		<dependency> <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>32.1.2-jre</version>
		</dependency>

		<dependency> <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.10.1</version>
		</dependency>

		<dependency> <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>2.0.9</version>
		</dependency>

		<dependency> <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.10.0</version>
			<scope>test</scope>
		</dependency>
		<dependency> <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.4.11</version>
			<scope>test</scope>
		</dependency>

		<dependency> <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.30</version>
			<scope>provided</scope>
		</dependency>
    </dependencies>

	<distributionManagement>
		<repository>
			<id>repo-domisum-io</id>
			<url>https://repo.domisum.io/repository/mvn-public/</url>
		</repository>
	</distributionManagement>
</project>
